--- a/week_13/week_13a.ipynb
+++ b/week_13/week_13a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,12 @@
     "        return self.s[-1]\n",
     "    \n",
     "    def is_empty(self):\n",
-    "        return (len(self.s) == 0) \n",
-    "\n",
-    "    \n",
-    "#my_stack = Stack()\n",
-    "#my_stack.push(3)\n",
-    "#my_stack.push(8)\n",
-    "#my_stack.pop()"
+    "        return (len(self.s) == 0) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +90,7 @@
     "        for k in range(self.size):            # only consider existing elements\n",
     "            self.data[k] = old[walk]            # intentionally shift indices\n",
     "            walk = (1 + walk) % len(old)         # use old size as modulus\n",
-    "            self.front = 0                        # front has been realigned\n",
-    "#qq = Queue()\n",
-    "#qq.enqueue(44)\n",
-    "#qq.enqueue(12)\n",
-    "#qq.dequeue()\n",
-    "#qq.dequeue()"
+    "            self.front = 0                        # front has been realigned"
    ]
   },
   {
@@ -116,6 +105,66 @@
     "         'D': ['B'],\n",
     "         'E': ['B', 'F'],\n",
     "         'F': ['C', 'E']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': {'B'}, 'B': {'C', 'D'}, 'D': {'E'}, 'E': {'F'}, 'F': {'G'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import heapq\n",
+    "\n",
+    "\n",
+    "def create_spanning_tree(graph, starting_vertex):\n",
+    "    mst = defaultdict(set)\n",
+    "    visited = set([starting_vertex])\n",
+    "    edges = [\n",
+    "        (cost, starting_vertex, to)\n",
+    "        for to, cost in graph[starting_vertex].items()\n",
+    "    ]\n",
+    "    heapq.heapify(edges)\n",
+    "\n",
+    "    while edges:\n",
+    "        cost, frm, to = heapq.heappop(edges)\n",
+    "        if to not in visited:\n",
+    "            visited.add(to)\n",
+    "            mst[frm].add(to)\n",
+    "            for to_next, cost in graph[to].items():\n",
+    "                if to_next not in visited:\n",
+    "                    heapq.heappush(edges, (cost, to, to_next))\n",
+    "\n",
+    "    return mst\n",
+    "\n",
+    "example_graph = {\n",
+    "    'A': {'B': 2, 'C': 3},\n",
+    "    'B': {'A': 2, 'C': 1, 'D': 1, 'E': 4},\n",
+    "    'C': {'A': 3, 'B': 1, 'F': 5},\n",
+    "    'D': {'B': 1, 'E': 1},\n",
+    "    'E': {'B': 4, 'D': 1, 'F': 1},\n",
+    "    'F': {'C': 5, 'E': 1, 'G': 1},\n",
+    "    'G': {'F': 1},\n",
+    "}\n",
+    "\n",
+    "dict(create_spanning_tree(example_graph, 'A'))\n",
+    "\n",
+    "# {'A': set(['B']),\n",
+    "#  'B': set(['C', 'D']),\n",
+    "#  'D': set(['E']),\n",
+    "#  'E': set(['F']),\n",
+    "#  'F': set(['G'])}"
    ]
   },
   {
@@ -136,7 +185,7 @@
    ],
    "source": [
     "def bfs(graph, start): \n",
-    "    visited = []           # the list of all vertices visited over bfs\n",
+    "    MST = {}           # the list of all vertices in the MST so far\n",
     "    vert_Q = Queue()       # a queue that holds vertices temporarily as we go bfs\n",
     "    vert_Q.enqueue(start)  # add the starting vertex to the rear of queue\n",
     "\n",
@@ -154,84 +203,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A', 'B', 'D', 'E', 'F', 'C']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "graph = {'A': ['B', 'C'],\n",
-    "         'B': ['A', 'D', 'E'],\n",
-    "         'C': ['A', 'F'],\n",
-    "         'D': ['B'],\n",
-    "         'E': ['B', 'F'],\n",
-    "         'F': ['C', 'E']}\n",
+    "example_graph = {\n",
+    "    'A': {'B': 2, 'C': 3},\n",
+    "    'B': {'A': 2, 'C': 1, 'D': 1, 'E': 4},\n",
+    "    'C': {'A': 3, 'B': 1, 'F': 5},\n",
+    "    'D': {'B': 1, 'E': 1},\n",
+    "    'E': {'B': 4, 'D': 1, 'F': 1},\n",
+    "    'F': {'C': 5, 'E': 1, 'G': 1},\n",
+    "    'G': {'F': 1},\n",
+    "}\n",
     "\n",
-    "def dfs(graph, start, visited=[]):    # visited is the list of all vertices visited over dfs\n",
-    "    vert_stack = Stack()              # a stack that holds vertices temporarily as we go dfs\n",
-    "    vert_stack.push(start)            # push the starting vertex onto the top of stack\n",
-    "    \n",
-    "    while not vert_stack.is_empty():   # keep exploring till no vertex remains unvisited\n",
-    "        vertex = vert_stack.pop()      # get the first vertex at the top of the stack\n",
-    "        #print(vertex)\n",
-    "        if vertex not in visited:      # if this vertex has not been visited before, (i.e. not in visisted list yet)\n",
-    "            visited.append(vertex)     # visit it, i.e. add it to the visited list\n",
-    "            for v in graph[vertex]:    # for each of its adjacent vertices, v\n",
-    "                if v not in visited:   # in case the vertex v has not been visited before\n",
-    "                    dfs(graph, v, visited)  # depth first search the vertex v\n",
-    "    return visited                      # when the stack is emptied, return the visited sequence \n",
+    "# initialize the graph\n",
     "\n",
-    "dfs(graph, 'A') # {'E', 'D', 'F', 'A', 'C', 'B'}"
+    "# populate the graph\n",
+    "    #loop graph[v][u] = weight\n",
+    "\n",
+    "# initialize the MST and the set X\n",
+    "T = set();\n",
+    "X = set();\n",
+    "\n",
+    "# select an arbitrary vertex to begin with\n",
+    "X.add(0);\n",
+    "\n",
+    "while len(X) != vertices:\n",
+    "    crossing = set();\n",
+    "    # for each element x in X, add the edge (x, k) to crossing if\n",
+    "    # k is not in X\n",
+    "    for x in X:\n",
+    "        for k in range(vertices):\n",
+    "            if k not in X and graph[x][k] != 0:\n",
+    "                crossing.add((x, k))\n",
+    "    # find the edge with the smallest weight in crossing\n",
+    "    edge = sorted(crossing, key=lambda e:graph[e[0]][e[1]])[0];\n",
+    "    # add this edge to T\n",
+    "    T.add(edge)\n",
+    "    # add the new vertex to X\n",
+    "    X.add(edge[1])\n",
+    "\n",
+    "# print the edges of the MST\n",
+    "for edge in T:\n",
+    "    print edge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['D', 'B', 'E', 'F', 'C', 'A']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "graph = {'A': ['B', 'C'],\n",
-    "         'B': ['A', 'D', 'E'],\n",
-    "         'C': ['A', 'F'],\n",
-    "         'D': ['B'],\n",
-    "         'E': ['B', 'F'],\n",
-    "         'F': ['C', 'E']}\n",
-    "\n",
-    "def dfs(graph, start, visited=[]):    # visited is the list of all vertices visited over dfs\n",
-    "    vert_stack = Stack()              # a stack that holds vertices temporarily as we go dfs\n",
-    "    vert_stack.push(start)            # push the starting vertex onto the top of stack\n",
-    "    \n",
-    "    while not vert_stack.is_empty():   # keep exploring till no vertex remains unvisited\n",
-    "        vertex = vert_stack.pop()      # get the first vertex at the top of the stack\n",
-    "        #print(vertex)\n",
-    "        if vertex not in visited:      # if this vertex has not been visited before, (i.e. not in visisted list yet)\n",
-    "            visited.append(vertex)     # visit it, i.e. add it to the visited list\n",
-    "            for v in graph[vertex]:    # for each of its adjacent vertices, v\n",
-    "                if v not in visited:   # in case the vertex v has not been visited before\n",
-    "                    vert_stack.push(v)   # depth first search the vertex v\n",
-    "    return visited                      # when the stack is emptied, return the visited sequence \n",
-    "\n",
-    "dfs(graph, 'D') # {'E', 'D', 'F', 'A', 'C', 'B'}"
+    "example_graph = {\n",
+    "    'A': {'B': 2, 'C': 3},\n",
+    "    'B': {'A': 2, 'C': 1, 'D': 1, 'E': 4},\n",
+    "    'C': {'A': 3, 'B': 1, 'F': 5},\n",
+    "    'D': {'B': 1, 'E': 1},\n",
+    "    'E': {'B': 4, 'D': 1, 'F': 1},\n",
+    "    'F': {'C': 5, 'E': 1, 'G': 1},\n",
+    "    'G': {'F': 1},\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('my name')"
    ]
   },
   {
@@ -244,8 +285,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (Spyder)",
-   "language": "python3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -258,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
